feat(locales): add additional media type labels to common.json

--- a/apps/frontend/public/locales/en/common.json
+++ b/apps/frontend/public/locales/en/common.json
@@ -27,5 +27,10 @@
   "logout": "Logout",
   "system": "System",
   "light": "Light",
-  "dark": "Dark"
+  "dark": "Dark",
+  "images": "Images",
+  "videos": "Videos",
+  "audios": "Audios",
+  "documents": "Documents",
+  "others": "Others"
 }
