feat(locales): enhance authentication messages for password recovery
- Added new localization strings for forgot password, reset password, and verification code processes in auth.json.
- Included a submit button label in common.json to improve user interface consistency.

--- a/web/public/locales/en/auth.json
+++ b/web/public/locales/en/auth.json
@@ -8,6 +8,17 @@
   "register_title": "Create an account",
   "register_description": "Enter your details to create an account.",
 
+  "forgot_password_title": "Forgot password?",
+  "forgot_password_description": "Enter your email to reset your password.",
+
+  "reset_password_title": "Reset password",
+  "reset_password_description": "Enter your new password to reset your password.",
+  "enter_new_password": "Enter new password",
+
+  "verify_code_title": "Verify code",
+  "verify_code_description": "Code sent to {{email}}",
+  "verify_code_placeholder": "Enter the code sent to your email",
+
   "name": "Name",
   "name_placeholder": "John Doe",
   "email": "Email",
