--- a/web/public/locales/en/common.json
+++ b/web/public/locales/en/common.json
@@ -25,6 +25,7 @@
   "my_account": "My Account",
   "profile": "Profile",
   "logout": "Logout",
+  "submit": "Submit",
   "system": "System",
   "light": "Light",
   "dark": "Dark",
