feat: add docs and landing page

--- a/apps/www/content/docs/index.mdx
+++ b/apps/www/content/docs/index.mdx
@@ -1,13 +1,23 @@
 ---
-title: Hello World
-description: Your first document
+title: Introduction
+description: Overview of Drivebase and this documentation
 ---
 
-Welcome to the docs! You can start writing documents in `/content/docs`.
+Drivebase is a self-hosted cloud file manager that unifies multiple storage providers into one interface.
 
-## What is Next?
+This documentation is intentionally lightweight and focused on getting you productive quickly.
 
-<Cards>
-  <Card title="Learn more about Next.js" href="https://nextjs.org/docs" />
-  <Card title="Learn more about Fumadocs" href="https://fumadocs.dev" />
-</Cards>
+## Docs Outline
+
+- API
+- Configuration
+- Contributing
+- Deployment
+- FAQ
+- Quick Start
+- Installation
+- Storage Providers
+- Troubleshooting
+- Using Drivebase
+
+Start with [Quick Start](/docs/getting-started) if you are setting up Drivebase for the first time.
