--- a/apps/www/content/docs/index.mdx
+++ b/apps/www/content/docs/index.mdx
@@ -1,23 +1,37 @@
 ---
 title: Introduction
 description: Overview of Drivebase and this documentation
+icon: "BookOpen"
 ---
 
-Drivebase is a self-hosted cloud file manager that unifies multiple storage providers into one interface.
+Drivebase is a self-hosted cloud file manager designed to unify file storage across multiple cloud providers into one seamless interface. It empowers users to organize, upload, and access files across diverse storage backends — all under one unified folder structure.
 
-This documentation is intentionally lightweight and focused on getting you productive quickly.
+With Drivebase, you can break free from cloud provider lock-in and take full control of where your files are stored.
 
-## Docs Outline
+## Key Features
 
-- API
-- Configuration
-- Contributing
-- Deployment
-- FAQ
-- Quick Start
-- Installation
-- Storage Providers
-- Troubleshooting
-- Using Drivebase
+- **Unified Interface**: Manage files from different providers in a single view.
+- **Cloud Agnostic**: Switch between providers without changing your workflow.
+- **Self-Hosted**: Keep your data private and under your control.
+- **Modern Stack**: Built with TypeScript, React, and GraphQL for performance and reliability.
 
-Start with [Quick Start](/docs/getting-started) if you are setting up Drivebase for the first time.
+## Supported Providers
+
+Drivebase currently supports the following storage backends:
+
+- **S3 Compatible Storage**: AWS S3, MinIO, DigitalOcean Spaces, etc.
+- **Google Drive**: Seamless integration with your Google Drive account.
+- **Local Filesystem**: Use your server's local disk for storage.
+
+## Documentation Overview
+
+This documentation is structured to help you get up and running quickly:
+
+- **[Getting Started](/docs/getting-started)**: Quick start guide for new users.
+- **[Installation](/docs/installation)**: Detailed installation instructions for Docker and manual setups.
+- **[Configuration](/docs/configuration)**: comprehensive guide on environment variables and settings.
+- **[Storage Providers](/docs/storage-providers)**: How to configure and connect different storage backends.
+- **[Using Drivebase](/docs/using-drivebase)**: User guide for day-to-day operations.
+- **[Deployment](/docs/deployment)**: Best practices for deploying to production.
+- **[Troubleshooting](/docs/troubleshooting)**: Solutions to common issues.
+- **[FAQ](/docs/faq)**: Frequently asked questions.
