--- a/apps/www/content/docs/index.mdx
+++ b/apps/www/content/docs/index.mdx
@@ -4,6 +4,8 @@ description: Overview of Drivebase and this documentation
 icon: "BookOpen"
 ---
 
+![Drivebase Banner](/banner.jpeg)
+
 Drivebase is a self-hosted cloud file manager designed to unify file storage across multiple cloud providers into one seamless interface. It empowers users to organize, upload, and access files across diverse storage backends — all under one unified folder structure.
 
 With Drivebase, you can break free from cloud provider lock-in and take full control of where your files are stored.
@@ -30,7 +32,7 @@ This documentation is structured to help you get up and running quickly:
 - **[Getting Started](/docs/getting-started)**: Quick start guide for new users.
 - **[Installation](/docs/installation)**: Detailed installation instructions for Docker and manual setups.
 - **[Configuration](/docs/configuration)**: comprehensive guide on environment variables and settings.
-- **[Storage Providers](/docs/storage-providers)**: How to configure and connect different storage backends.
+- **[Storage Providers](/docs/storage-providers/overview)**: How to configure and connect different storage backends.
 - **[Using Drivebase](/docs/using-drivebase)**: User guide for day-to-day operations.
 - **[Deployment](/docs/deployment)**: Best practices for deploying to production.
 - **[Troubleshooting](/docs/troubleshooting)**: Solutions to common issues.
