--- a/apps/www/content/docs/configuration.mdx
+++ b/apps/www/content/docs/configuration.mdx
@@ -42,8 +42,8 @@ openssl rand -base64 32
 ```dotenv
 NODE_ENV=production
 PORT=4000
-API_BASE_URL=https://api.drivebase.io
-CORS_ORIGIN=https://app.drivebase.io
+API_BASE_URL=https://api.drivebase.one
+CORS_ORIGIN=https://app.drivebase.one
 
 DATABASE_URL=postgres://drivebase:securepassword@db.example.com:5432/drivebase
 REDIS_URL=redis://redis.example.com:6379
@@ -51,5 +51,5 @@ REDIS_URL=redis://redis.example.com:6379
 JWT_SECRET=xY7z... (at least 32 characters)
 ENCRYPTION_KEY=aB1c... (exactly 32 characters recommended)
 
-VITE_PUBLIC_API_URL=https://api.drivebase.io/graphql
+VITE_PUBLIC_API_URL=https://api.drivebase.one/graphql
 ```
