feat(docs): add Dropbox integration documentation and update README

--- a/apps/www/content/docs/storage-providers/overview.mdx
+++ b/apps/www/content/docs/storage-providers/overview.mdx
@@ -12,6 +12,7 @@ Click on a provider below to view specific setup and configuration instructions:
 - **[Local Storage](/docs/storage-providers/local)**: Use your server's disk space.
 - **[S3 Compatible Storage](/docs/storage-providers/s3)**: Connect AWS S3, MinIO, R2, and more.
 - **[Google Drive](/docs/storage-providers/google-drive)**: Manage your Google Drive files.
+- **[Dropbox](/docs/storage-providers/dropbox)**: Connect your Dropbox account.
 
 ## Common Features
 
