--- a/apps/www/content/docs/storage-providers/overview.mdx
+++ b/apps/www/content/docs/storage-providers/overview.mdx
@@ -13,6 +13,7 @@ Click on a provider below to view specific setup and configuration instructions:
 - **[S3 Compatible Storage](/docs/storage-providers/s3)**: Connect AWS S3, MinIO, R2, and more.
 - **[Google Drive](/docs/storage-providers/google-drive)**: Manage your Google Drive files.
 - **[Dropbox](/docs/storage-providers/dropbox)**: Connect your Dropbox account.
+- **[FTP](/docs/storage-providers/ftp)**: Connect any FTP or FTPS file server.
 
 ## Common Features
 
