feat(provider): add WebDAV storage provider integration and update related documentation

--- a/apps/www/content/docs/storage-providers/overview.mdx
+++ b/apps/www/content/docs/storage-providers/overview.mdx
@@ -14,6 +14,7 @@ Click on a provider below to view specific setup and configuration instructions:
 - **[Google Drive](/docs/storage-providers/google-drive)**: Manage your Google Drive files.
 - **[Dropbox](/docs/storage-providers/dropbox)**: Connect your Dropbox account.
 - **[FTP](/docs/storage-providers/ftp)**: Connect any FTP or FTPS file server.
+- **[WebDAV](/docs/storage-providers/webdav)**: Connect Nextcloud, ownCloud, or any WebDAV server.
 
 ## Common Features
 
