docs: update installation command from wget to curl for better compatibility

--- a/apps/www/content/docs/installation.mdx
+++ b/apps/www/content/docs/installation.mdx
@@ -18,7 +18,7 @@ Regardless of the installation method, you will need:
 Using Docker Compose is the easiest way to manage Drivebase. You can start it instantly with our automated installer:
 
 ```bash
-wget -qO- https://drivebase.one/install | bash
+curl -fsSL https://drivebase.one/install | bash
 ```
 
 ### Manual Compose Setup
