docs(workspace): enhance workspace documentation

--- a/apps/www/content/docs/using-drivebase/index.mdx
+++ b/apps/www/content/docs/using-drivebase/index.mdx
@@ -27,6 +27,20 @@ Drivebase uses a **Virtual Folder Structure**. This means you can create folders
 - **Breadcrumbs**: Use the breadcrumbs at the top of the file list to navigate back up the folder hierarchy.
 - **Sidebar**: The sidebar provides quick access to the root folder, favorites, and recent files.
 
+## Workspaces
+
+### Switching Workspaces
+- Use the workspace avatar at the bottom of the sidebar to open the workspace menu.
+- Select any workspace in the menu to switch active context.
+
+### Creating a Workspace
+- Use **Create workspace** from the workspace menu.
+- The create screen opens on `/workspaces/create` in a standalone onboarding-style layout (outside the dashboard shell).
+- Choose a workspace name and one of the pastel accent colors.
+
+### Workspace Color Accessibility
+- Workspace pastel chips and sidebar avatar use dark text/icons for better contrast and readability.
+
 ## Search and Favorites
 
 ### Searching
