--- a/apps/web/src/locales/en/messages.po
+++ b/apps/web/src/locales/en/messages.po
@@ -21,6 +21,10 @@ msgstr "Account"
 msgid "Activity"
 msgstr "Activity"
 
+#: src/features/settings/components/SettingsCategoryNav.tsx:24
+msgid "Advanced"
+msgstr "Advanced"
+
 #: src/components/layout/Header.tsx:111
 #: src/config/pageTitles.ts:6
 msgid "All Files"
@@ -88,6 +92,23 @@ msgstr "Documents"
 msgid "Email"
 msgstr "Email"
 
+#: src/features/settings/sections/ExportSection.tsx:82
+msgid "Encryption password"
+msgstr "Encryption password"
+
+#: src/features/settings/sections/ExportSection.tsx:37
+#: src/features/settings/sections/ExportSection.tsx:107
+msgid "Export workspace"
+msgstr "Export workspace"
+
+#: src/features/settings/sections/ExportSection.tsx:40
+msgid "Export your workspace data including files, folders, and optionally provider configurations."
+msgstr "Export your workspace data including files, folders, and optionally provider configurations."
+
+#: src/features/settings/sections/ExportSection.tsx:103
+msgid "Exporting..."
+msgstr "Exporting..."
+
 #: src/features/settings/sections/AccountSettingsSection.tsx:51
 msgid "Failed to update profile"
 msgstr "Failed to update profile"
@@ -108,6 +129,14 @@ msgstr "General"
 #: src/components/layout/Header.tsx:123
 msgid "Images"
 msgstr "Images"
+
+#: src/features/settings/sections/ExportSection.tsx:58
+msgid "Include provider configurations"
+msgstr "Include provider configurations"
+
+#: src/features/settings/sections/ExportSection.tsx:75
+msgid "Include sensitive credentials (requires password)"
+msgstr "Include sensitive credentials (requires password)"
 
 #: src/features/settings/sections/PreferencesSettingsSection.tsx:82
 msgid "Language"
@@ -218,6 +247,10 @@ msgstr "System"
 #: src/features/settings/sections/PreferencesSettingsSection.tsx:41
 msgid "Theme"
 msgstr "Theme"
+
+#: src/features/settings/sections/ExportSection.tsx:93
+msgid "This password will be used to encrypt your export file. Keep it safe, as you'll need it to import the data."
+msgstr "This password will be used to encrypt your export file. Keep it safe, as you'll need it to import the data."
 
 #: src/components/layout/Sidebar.tsx:39
 #: src/config/pageTitles.ts:9
