docs: clarify vault storage docs

--- a/apps/www/content/blogs/drivebase-v2.mdx
+++ b/apps/www/content/blogs/drivebase-v2.mdx
@@ -13,9 +13,9 @@ This release focuses on three things: stronger security, faster day-to-day workf
 
 ## What is new in v2
 
-### Vault is now part of Drivebase
+### Vault in Drivebase v2
 
-Vault is now implemented in Drivebase v2, giving teams a dedicated place to manage sensitive content with clearer provider context and better control over protected data workflows.
+Vault in Drivebase v2 gives teams a dedicated encrypted workflow for sensitive content. Files are encrypted client-side, then proxied through the Drivebase API to the configured storage provider, so providers receive ciphertext rather than plaintext.
 
 ### Workspace export with encryption options
 
