--- a/apps/www/content/blogs/drivebase-v2.mdx
+++ b/apps/www/content/blogs/drivebase-v2.mdx
@@ -15,7 +15,7 @@ This release focuses on three things: stronger security, faster day-to-day workf
 
 ### Vault in Drivebase v2
 
-Vault in Drivebase v2 gives teams a dedicated encrypted workflow for sensitive content. Files are encrypted client-side, then proxied through the Drivebase API to the configured storage provider, so providers receive ciphertext rather than plaintext.
+Vault in Drivebase v2 gives teams a dedicated encrypted workflow for sensitive content. Files are encrypted in the browser before they are sent to the configured storage provider, so providers receive ciphertext rather than plaintext.
 
 ### Workspace export with encryption options
 
