feat: add nextcloud support

--- a/apps/www/content/docs/storage-providers/overview.mdx
+++ b/apps/www/content/docs/storage-providers/overview.mdx
@@ -16,6 +16,7 @@ Click on a provider below to view specific setup and configuration instructions:
 - **[FTP](/docs/storage-providers/ftp)**: Connect any FTP or FTPS file server.
 - **[WebDAV](/docs/storage-providers/webdav)**: Connect Nextcloud, ownCloud, or any WebDAV server.
 - **[Telegram](/docs/storage-providers/telegram)**: Use Telegram's Saved Messages as cloud file storage.
+- **[Nextcloud](/docs/storage-providers/nextcloud)**: Connect your Nextcloud instance with Login Flow v2.
 
 ## Common Features
 
