refactor: update telemetry event structure to remove environment data

--- a/apps/www/content/docs/telemetry.mdx
+++ b/apps/www/content/docs/telemetry.mdx
@@ -11,7 +11,7 @@ All events are tied to a randomly generated **instance ID** — a UUID created o
 
 | Event | Data collected |
 |---|---|
-| `server_started` | App version, environment (`production`/`development`) |
+| `server_started` | App version |
 | `server_shutdown` | _(none)_ |
 | `user_registered` | Role (`owner`, `admin`, `member`) |
 | `user_login` | Success or failure (boolean) |
