chore: update drivebase domain

--- a/apps/www/content/blogs/introducing-drivebase.mdx
+++ b/apps/www/content/blogs/introducing-drivebase.mdx
@@ -50,7 +50,7 @@ Drivebase is designed to be up and running in minutes. We provide an automated i
 Run this command on your machine or server:
 
 ```bash
-curl -fsSL https://drivebase.one/install | bash
+curl -fsSL https://drivebase.io/install | bash
 ```
 
 This will set up Drivebase along with the necessary database services, so you can start managing your files immediately.
