--- a/apps/www/content/docs/installation.mdx
+++ b/apps/www/content/docs/installation.mdx
@@ -18,7 +18,7 @@ Regardless of the installation method, you will need:
 Using Docker Compose is the easiest way to manage Drivebase. You can start it instantly with our automated installer:
 
 ```bash
-curl -fsSL https://drivebase.one/install | bash
+curl -fsSL https://drivebase.io/install | bash
 ```
 
 ### Manual Compose Setup
@@ -28,10 +28,10 @@ If you prefer to manage the file locally:
 1. **Download the Production Compose file**:
    ```bash
    # Using wget
-   wget -O compose.yaml https://drivebase.one/compose
+   wget -O compose.yaml https://drivebase.io/compose
 
    # OR using curl
-   curl -o compose.yaml https://drivebase.one/compose
+   curl -o compose.yaml https://drivebase.io/compose
    ```
 
 2. **Configure your environment**:
