--- a/apps/www/content/docs/quick-start.mdx
+++ b/apps/www/content/docs/quick-start.mdx
@@ -18,7 +18,7 @@ Before you begin, ensure you have the following installed on your system:
 The fastest way to get started is with our automated installer:
 
 ```bash
-curl -o compose.yaml https://drivebase.one/compose
+curl -o compose.yaml https://drivebase.io/compose
 ```
 
 This will create a `drivebase` folder, set up your configuration, and generate secure keys automatically.
@@ -27,7 +27,7 @@ Alternatively, you can follow the manual steps below:
 
 1. **Download the Production Compose file**:
    ```bash
-   curl -o compose.yaml https://drivebase.one/compose
+   curl -o compose.yaml https://drivebase.io/compose
    ```
 
 2. **Create an environment file**:
