feat: add darkibox provider

--- a/apps/www/content/docs/storage-providers/overview.mdx
+++ b/apps/www/content/docs/storage-providers/overview.mdx
@@ -17,6 +17,7 @@ Click on a provider below to view specific setup and configuration instructions:
 - **[WebDAV](/docs/storage-providers/webdav)**: Connect Nextcloud, ownCloud, or any WebDAV server.
 - **[Telegram](/docs/storage-providers/telegram)**: Use Telegram's Saved Messages as cloud file storage.
 - **[Nextcloud](/docs/storage-providers/nextcloud)**: Connect your Nextcloud instance with Login Flow v2.
+- **[Darkibox](/docs/storage-providers/darkibox)**: Connect your Darkibox account using an API key.
 
 ## Common Features
 
