style: add animation to landing page section

--- a/apps/www/content/docs/quick-start.mdx
+++ b/apps/www/content/docs/quick-start.mdx
@@ -18,7 +18,7 @@ Before you begin, ensure you have the following installed on your system:
 The fastest way to get started is with our automated installer:
 
 ```bash
-curl -o compose.yaml https://drivebase.io/compose
+curl -fsSL https://drivebase.io/install | bash
 ```
 
 This will create a `drivebase` folder, set up your configuration, and generate secure keys automatically.
