refactor: update roadmap structure

--- a/apps/www/content/roadmaps/v0-early-development.mdx
+++ b/apps/www/content/roadmaps/v0-early-development.mdx
@@ -1,9 +1,7 @@
 ---
 title: v0 Early Development
-description: "Laid the groundwork with early architecture, CI/CD setup, and initial migration work."
 version: v0.x
-date: 2025-03-17
-status: released
+date: "2025-03-17"
 features:
   - title: Delivery pipeline setup
     description: Set up early CI/CD workflows and automated build checks.
@@ -12,9 +10,3 @@ features:
   - title: Initial database migrations
     description: Added the first migration foundations for stable schema evolution.
 ---
-
-### Early Development
-The v0 cycle focused on validating architecture and getting the delivery pipeline in place.
-
-### Key Milestones
-Included pre-v1 CI/CD iterations, multi-platform build setup, and initial database migration foundations.
