--- a/apps/www/content/roadmaps/v1-foundation.mdx
+++ b/apps/www/content/roadmaps/v1-foundation.mdx
@@ -1,9 +1,7 @@
 ---
 title: v1 Foundation
-description: "Established core product capabilities across i18n, uploads, settings, and workspaces."
 version: v1.x
-date: 2026-02-17
-status: released
+date: "2026-02-17"
 features:
   - title: Internationalization foundation
     description: Added multilingual support and localization groundwork across the app.
@@ -16,9 +14,3 @@ features:
   - title: Workspaces and invites
     description: Added workspace memberships and invite-based collaboration.
 ---
-
-### Foundation (Early Access)
-The v1 cycle focused on validating the product direction and shipping core capabilities quickly.
-
-### Key Milestones
-Included internationalization, cross-provider file movement, resumable uploads, settings and onboarding improvements, and workspace memberships with invites.
