--- a/apps/www/content/roadmaps/v3-stable.mdx
+++ b/apps/www/content/roadmaps/v3-stable.mdx
@@ -1,9 +1,7 @@
 ---
 title: 3 Stable
-description: "Production-grade reliability, performance, and collaboration polish for general availability."
 version: v3-stable
-status: planned
-date: 2026-03-1
+date: "2026-03-01"
 features:
   - title: Stability and hardening
     description: Finalize edge-case handling, resilience, and predictable behavior across core flows.
@@ -14,6 +12,3 @@ features:
   - title: Release readiness
     description: Complete docs, upgrade paths, and operational quality gates for stable rollout.
 ---
-
-### Stable Milestone
-This release represents the transition from Alpha iteration to a stable, broadly deployable product.
