--- a/apps/www/content/roadmaps/v3-alpha.mdx
+++ b/apps/www/content/roadmaps/v3-alpha.mdx
@@ -1,9 +1,7 @@
 ---
 title: 3 Alpha
-description: "AI-powered semantic search, real-time activity visibility, faster navigation, and deeper workspace insights."
 version: v3-alpha
-status: in-progress
-date: 2026-02-23
+date: "2026-02-25"
 features:
   - title: AI semantic search
     description: Search files semantically with OCR and object detection support.
@@ -22,9 +20,3 @@ features:
   - title: Activity and transfer improvements
     description: Added richer job metadata, provider rename support, and real-time progress updates.
 ---
-
-### What's New
-AI-powered semantic file search with OCR and object detection, a real-time activity panel, command palette navigation, workspace storage and bandwidth analytics, provider sync controls, recent files with AI-assisted queries, and folder-based browsing.
-
-### Improvements
-Enhanced activity tracking with detailed job metadata, provider rename support, and real-time progress updates for transfers and analysis.
